--- a/.github/workflows/wiki_sync.yml
+++ b/.github/workflows/wiki_sync.yml
@@ -1,13 +1,31 @@
-name: Docs Build & Wiki Sync
+name: Docs Sync
 
 on:
   push:
     branches: ["main"]
-  workflow_dispatch:   # manuelles Triggern
+  workflow_dispatch:
 
 jobs:
-  build-docs:
+  sync-wiki:
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Push Markdown docs to Wiki
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git clone https://x-access-token:${GITHUB_TOKEN}@github.com/tb-killa/aioworxmower-docs.wiki.git wiki
+          rsync -av --delete docs/ wiki/
+          cd wiki
+          git config user.email "ci@example.com"
+          git config user.name "CI Bot"
+          git add .
+          git commit -m "sync docs → wiki" || echo "No changes"
+          git push
+
+  build-html:
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/release-html')
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -19,31 +37,8 @@ jobs:
         run: poetry install --no-root
       - name: Build docs
         run: poetry run mkdocs build --strict
-      - name: Upload artifact
+      - name: Upload HTML artifact
         uses: actions/upload-artifact@v4
         with:
           name: site
           path: site
-
-  sync-wiki:
-    needs: build-docs
-    runs-on: ubuntu-latest
-    if: ${{ success() }}
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: site
-          path: site
-      - name: Push to Wiki
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-            git clone https://x-access-token:${GITHUB_TOKEN}@github.com/tb-killa/aioworxmower-docs.wiki.git wiki
-            cp -r site/* wiki/
-            cd wiki
-            git config user.email "ci@example.com"
-            git config user.name "CI Bot"
-            git add .
-            git commit -m "update wiki" || echo "No changes"
-            git push
